# ansible-wrapper

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release.yml  reuse.yml  verify.yml
src/: main.rs
src/ansible/: galaxy.rs  mod.rs  model.rs
src/python/: mod.rs  model.rs
